# task-scheduler-rs

./: Cargo.toml  deny.toml
.github/workflows/: rust.yml
src/: main.rs  redis.rs  redis_helper.rs  scheduler.rs  settings.rs  task_repository.rs
src/amqp/: base.rs  consumer.rs  mod.rs  producer.rs
src/task/: consumer.rs  mod.rs  model.rs  repository.rs  scheduler.rs
