[package]
name = "task-scheduler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
dotenv = "0.15.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.16.0"
redis = { version = "0.22.1", features = ["tokio-comp", "json"] }
testcontainers = "0.14.0"
async-trait = "0.1.58"
lapin = "2.1.1"
borsh = "0.9.3"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
futures-lite = "1.12.0"
